# cs3203-spa

./: .clang-format  .gitignore  .gitmodules  README.md  check-submission.py
Team02/Code02/: .gitignore  CMakeLists.txt  CMakeSettings.json
Team02/Code02/lib/autotester/AMD64/Windows/Debug/: autotester.lib
Team02/Code02/lib/autotester/AMD64/Windows/Release/: autotester.lib
Team02/Code02/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team02/Code02/src/autotester_gui/src/: mainwindow.cpp
Team02/Code02/src/integration_testing/: CMakeLists.txt
Team02/Code02/src/integration_testing/src/: TestFrontEnd.cpp  TestQpsWithPKB_BasicRead.cpp  TestSPWithPKB.cpp  TestSPWithPKB_AbstractionExtractor.cpp  TestSPWithPKB_CfgExtractor.cpp  TestSPWithPKB_EntityExtractor.cpp  TestSpWithPkbAbstractionExtractor.cpp
Team02/Code02/src/integration_testing/src/QpsPkb/: TestQpsWithPkbBasicRead.cpp  TestQpsWithPkbPattern.cpp
Team02/Code02/src/integration_testing/src/QpsPkb/ExpressionGeneratorStub/: ExpressionGeneratorStub.h
Team02/Code02/src/integration_testing/src/SpPkb/: TestSpWithPkbAbstractionExtractor.cpp  TestSpWithPkbEntityExtractor.cpp
Team02/Code02/src/spa/: CMakeLists.txt
Team02/Code02/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp  TNode.cpp  TNode.h
Team02/Code02/src/spa/src/General/: LexicalRuleValidator.cpp  LexicalRuleValidator.h  StatementTypeEnum.h  StringUtil.cpp  StringUtil.h  Utilities.cpp  Utilities.h
Team02/Code02/src/spa/src/General/SpaException/: SemanticErrorException.cpp  SemanticErrorException.h  SpaException.cpp  SpaException.h  SyntaxErrorException.cpp  SyntaxErrorException.h
Team02/Code02/src/spa/src/PKB/: PKB.cpp  PKB.h  PKBStores.h  Pkb.cpp  Pkb.h
Team02/Code02/src/spa/src/PKB/AbstractDataModels/: KeyValueStore.h  ManyToManyStore.cpp  ManyToManyStore.h  ManyToManyStore.tpp  OneToManyStore.cpp  OneToManyStore.h  OneToManyStore.tpp  OneToOneStore.cpp  OneToOneStore.h  OneToOneStore.tpp
Team02/Code02/src/spa/src/PKB/Interfaces/: PkbReadFacade.cpp  PkbReadFacade.h  PkbWriteFacade.cpp  PkbWriteFacade.h
Team02/Code02/src/spa/src/PKB/Stores/: AssignmentStore.cpp  AssignmentStore.h  CFGStore.cpp  CFGStore.h  CallsStore.cpp  CallsStore.h  CfgStore.cpp  CfgStore.h  ControlFlowStore.cpp  ControlFlowStore.h  EntityStore.cpp  EntityStore.h  ExpressionStore.cpp  ExpressionStore.h  FollowsStore.cpp  FollowsStore.h  ModifiesStore.cpp  ModifiesStore.h  NextStore.cpp  NextStore.h  ParentStore.cpp  ParentStore.h  StatementStore.cpp  StatementStore.h  StatmentStore.h  UsesStore.cpp  UsesStore.h
Team02/Code02/src/spa/src/PKB/Types/: PkbCommunicationTypes.h  PkbTypes.h
Team02/Code02/src/spa/src/PKB/Util/: CachingUtil.h  ExpressionUtil.h  FunctionalUtil.h  PairFilterUtil.h  PairHasherUtil.h  TransitiveRelationUtil.h
Team02/Code02/src/spa/src/QPS/: AbstractSyntaxExtractor.cpp  AbstractSyntaxExtractor.h  ClauseSemanticValidator.cpp  ClauseSemanticValidator.h  ClauseSemanticVisitor.cpp  ClauseSemanticVisitor.h  ClauseSyntaxValidator.cpp  ClauseSyntaxValidator.h  ClauseSyntaxVisitor.cpp  ClauseSyntaxVisitor.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionSpecParser.cpp  ExpressionSpecParser.h  LexicalRuleValidator.cpp  PQLConstants.h  QPSTypeDefs.h  Qps.cpp  Qps.h  QpsTokenizer.cpp  QpsTokenizer.h  QpsValidator.cpp  QpsValidator.h  Query.cpp  Query.h  QueryParser.cpp  QueryParser.h  QueryUtil.cpp  QueryUtil.h  Result.cpp  Result.h  SemanticValidator.cpp  SemanticValidator.h  SyntaxValidator.cpp  SyntaxValidator.h  Tokenizer.cpp  Tokenizer.h  Visitor.h
Team02/Code02/src/spa/src/QPS/Clause/: ClauseSyntax.cpp  ClauseSyntax.h  PatternClauseSyntax.cpp  PatternClauseSyntax.h  SuchThatClauseSyntax.cpp  SuchThatClauseSyntax.h  WithClauseSyntax.cpp  WithClauseSyntax.h
Team02/Code02/src/spa/src/QPS/Evaluator/: ClauseEvaluator.cpp  ClauseEvaluator.h  DesignEntityGetter.cpp  DesignEntityGetter.h  PqlEvaluator.cpp  PqlEvaluator.h
Team02/Code02/src/spa/src/QPS/Optimizer/: ClauseGroup.cpp  ClauseGroup.h  CompareScore.cpp  CompareScore.h  Optimizer.cpp  Optimizer.h
Team02/Code02/src/spa/src/QPS/PqlException/: PqlException.cpp  PqlException.h  SemanticErrorException.cpp  SemanticErrorException.h  SyntaxErrorException.cpp  SyntaxErrorException.h
Team02/Code02/src/spa/src/QPS/Util/: HashPair.h  PQLConstants.h  QPSTypeDefs.h  QueryUtil.cpp  QueryUtil.h
Team02/Code02/src/spa/src/QPS/ValidationHandler/: AffectsHandler.cpp  AffectsHandler.h  CallsHandler.cpp  CallsHandler.h  FollowHandler.cpp  FollowHandler.h  Handler.cpp  Handler.h  ParentHandler.cpp  ParentHandler.h  (+10 more)
Team02/Code02/src/spa/src/SP/: ArithmeticOperatorToken.cpp  ArithmeticOperatorToken.h  ArithmeticOperatorType.h  ConditionalOperatorToken.cpp  ConditionalOperatorToken.h  ConditionalOperatorType.h  IntegerToken.cpp  IntegerToken.h  NameToken.cpp  NameToken.h  PunctuationToken.cpp  PunctuationToken.h  PunctuationType.h  RelationalOperatorToken.cpp  RelationalOperatorToken.h  RelationalOperatorType.h  SP.cpp  SP.h  Sp.cpp  Sp.h  Token.cpp  Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h
Team02/Code02/src/spa_benchmarks/: AddGitSubmodule.cmake  CMakeLists.txt  spa_benchmark.cpp
Team02/Code02/src/spa_benchmarks/lib/: .gitignore
Team02/Code02/src/unit_testing/: CMakeLists.txt
Team02/Code02/src/unit_testing/src/: TestAST.cpp  TestTNode.cpp  main.cpp
Team02/Code02/src/unit_testing/src/General/: TestLexicalRuleValidator.cpp  TestStringUtil.cpp
Team02/Code02/src/unit_testing/src/PKB/: TestPKB.cpp  TestPkbStores.cpp
Team02/Code02/src/unit_testing/src/QPS/: TestAbstractSyntaxExtractor.cpp  TestAffectsHandler.cpp  TestCallsHandler.cpp  TestExpressionParser.cpp  TestExpressionSpecParser.cpp  TestOptimizer.cpp  TestPatternHandler.cpp  TestPqlEvaluator.cpp  TestQPSLexicalRuleValidator.cpp  TestQps.cpp  TestQpsValidator.cpp  TestQueryParser.cpp  TestQueryUtil.cpp  TestResult.cpp  TestStmtProcToVarHandler.cpp  TestStmtToStmtHandler.cpp  TestStringUtil.cpp  TestSuchThatBaseHandler.cpp  TestTokenizer.cpp  TestWithHandler.cpp
Team02/Code02/src/unit_testing/src/SP/: TestTokenizer.cpp
(+401 files in other folders)
